<resources>
    <string name="app_name">MobileAssignment</string>
    <string name="HelloWorld">Hello World</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="headtitle">Eat Heal</string>
    <!-- TODO: Remove or change this placeholder text -->、
    <string name="menu_homepage">Homepage</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_recommendation">Recommendation</string>
    <string name="menu_mealPlan">Meal Plan</string>
    <string name="menu_cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_home">Homepage</string>
    <string name="titleLbl">Homepage</string>
    <string name="ic_menuAdmin">ic_menu</string>
    <string name="ic_orderAdmin">ic_order</string>
    <string name="ic_recommendationAdmin">ic_recommendation</string>
    <string name="changeRole">Change Role</string>
    <string name="addNewRec">Add New</string>
    <string name="recName">Recommendation Name</string>
    <string name="recDesc">Reccomendation  Description</string>
    <string name="subBtn">Submit</string>
    <string name="uploadTime">Upload Time</string>
    <string name="nameTitle_TextView">Title Name</string>
    <string name="description_TextView">Description</string>
    <string name="time_TextView">"Time Post : "</string>
    <string name="like_TextView">Like</string>
    <string name="dislike_TextView">Dislike</string>
    <string name="retrieveBtn">Retrieve</string>
    <string name="updateBtn">Update</string>
    <string name="deleteBtn">Delete</string>
    <string name="EnterMealName">Enter Meal Name</string>
    <string name="MealDescription">Meal Description</string>
    <string name="Price">Price</string>
    <string name="name_textView">Name</string>
    <string name="desc">Description</string>
    <string name="price">Price</string>
    <string name="Category">Category</string>

    <string-array name="MealCat">
        <item>Ala-Cart</item>
        <item>Weekly Meal Plan</item>
        <item>Monthly Meal Plan</item>
    </string-array>
    <string name="email">Email</string>
    <string name="create_account">Don\'t have an account? Create here</string>
    <string name="create">REGISTER ACCOUNT</string>
    <string name="register">Register</string>
    <string name="already_register">Login here</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="forgetpw">Forget password?</string>
    <string name="signout">Sign Out</string>
    <string name="forgotpw_title">Forget Password</string>
    <string name="forgotpwdetail">Enter your email to receive the reset link.</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string-array name="role">
        <item>User</item>
        <item>Admin</item>
    </string-array>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_recommendation_details">RecommendationDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="DailyCalories">Daily Calories Consumed</string>
    <string name="WeeklyCalories">Weekly Calories Consumed</string>
    <string name="MonthlyCalories">Monthly Calories Consumed</string>
    <string name="mealPlanWeek">Meal For This Week</string>
    <string name="eatHeal">Eat Heal</string>
    <string name="slogan">Eat Right Be Bright</string>
</resources>