<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/ic_home" />

    <item
        android:id="@+id/ic_menu"
        android:icon="@drawable/menu"
        android:title="@string/ic_menuAdmin" />

    <item
        android:id="@+id/ic_order"
        android:icon="@drawable/ic_baseline_access_time_24"
        android:title="@string/ic_orderAdmin" />

    <item
        android:id="@+id/ic_recommendationAdmin"
        android:icon="@drawable/chat"
        android:title="@string/ic_recommendationAdmin" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/signout" />

</menu>